Fix model CRUD operations
